--- a/assets/SASS/pages/pages.scss
+++ b/assets/SASS/pages/pages.scss
@@ -50,15 +50,18 @@
 
 .block-left {
   max-width: 780px;
+  width: 100%;
 }
 
 .block-center {
   max-width: 840px;
   margin-left: auto;
   margin-right: auto;
+  width: 100%;
 }
 
 .block-right {
   max-width: 780px;
   margin-left: auto;
+  width: 100%;
 }
